--- a/ConvertFromWordToPDF/ConvertFromWordToPDF.csproj
+++ b/ConvertFromWordToPDF/ConvertFromWordToPDF.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Colorful.Console" Version="1.2.11" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="WordToPDF">
